задала фокуси в посиланнях

--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
             </nav>
                 <ul class="auth-nav items-nav">
                     <li class="items">
-                        <svg  class = "icon" width="16" height="12">
+                        <a class="link" href="mailto:info@devstudio.com"> 
+                            <svg  class = "icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"></use>                          
-                        </svg>
-                        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        </svg>info@devstudio.com
+                        </a>
+                    </li>
                     <li class="items">
-                        <svg  class = "icon" width="10" height="16">
-                            <use href="./images/icons.svg#icon-smartphone"></use>                          </use>
-                        </svg>
-                        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <a class="link" href="tel:+380961111111">
+                            <svg  class = "icon" width="10" height="16">
+                                <use href="./images/icons.svg#icon-smartphone"></use>                          </use>
+                            </svg>
+                            +38 096 111 11 11
+                        </a>
                     </li>
                 </ul>
         </div>
@@ -49,7 +53,7 @@
                     <li class="work-item">
                         <div class="featur">
                             <svg width="70" height="70">
-                                <use href="./images/icons.svg#icon-antenna">
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="title">Увага до деталей</h3>
@@ -58,7 +62,7 @@
                     <li class="work-item">
                         <div class="featur">
                             <svg width="70" height="70">
-                                <use href="./images/icons.svg#icon-clock">
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="title">Пунктуальність</h3>
@@ -67,7 +71,7 @@
                     <li class="work-item">
                         <div class="featur">
                             <svg width="70" height="70">
-                                <use href="./images/icons.svg#icon-diagram">
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="title">Планування</h3>
@@ -76,7 +80,7 @@
                     <li class="work-item">
                         <div class="featur">
                             <svg width="70" height="70">
-                                <use href="./images/icons.svg#icon-astronaut">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="title">Сучасні технології</h3>
@@ -105,7 +109,7 @@
             <div class="container">
                 <h2 class="subject">Наша команда</h2>
                 <ul class="img">
-                    <li class="img-item">
+                    <li class="img-item team">
                         <img src="./images/img.jpg" alt="Фото Ігоря Дем'яненко" width="270">
                         <div class="name-desc">
                             <h3 class="name">Ігор Дем'яненко</h3>
@@ -116,35 +120,35 @@
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-instagram">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-twitter">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>    
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-facebook">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-linkedin">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
                         </div>
                     </li>
-                    <li class="img-item">
+                    <li class="img-item team">
                         <img src="./images/img1.jpg" alt="Фото Ольги Рєпіної" width="270">
                         <div class="name-desc">
                             <h3 class="name">Ольга Рєпіна</h3>
@@ -155,35 +159,35 @@
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-instagram">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-twitter">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>    
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-facebook">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-linkedin">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
                         </div> 
                     </li>
-                    <li class="img-item">
+                    <li class="img-item team">
                         <img src="./images/img2.jpg" alt="Фото Миколи Тарасова" width="270">
                         <div class="name-desc">
                             <h3 class="name">Микола Тарасов</h3>
@@ -194,35 +198,35 @@
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-instagram">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-twitter">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>    
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-facebook">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-linkedin">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
                         </div>
                     </li>
-                    <li class="img-item">
+                    <li class="img-item team">
                         <img src="./images/img3.jpg" alt="Фото Михайла Єрмакова" width="270">
                         <div class="name-desc">
                             <h3 class="name">Михайло Єрмаков</h3>
@@ -233,28 +237,28 @@
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-instagram">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-twitter">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>    
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-facebook">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a class="social-nav" href="#">
                                         <svg width="20" height="20">
-                                            <use href="./images/icons.svg#icon-linkedin">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -268,58 +272,46 @@
             <div class="container">
                 <h2 class="subject">Постійні клієнти</h2>
                 <ul class="clients-list">
-                    <li>
-                        <a>
-                            <div class="clients">
-                                <svg width="106" height="60">
-                                    <use href="./images/icons.svg#icon-yaco">
-                                </svg>
-                            </div>
+                    <li class="client-item">
+                        <a href="#" class="clients">
+                            <svg width="106" height="60">
+                                <use href="./images/icons.svg#icon-yaco">
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a>
-                            <div class="clients">
-                                <svg width="106" height="60">
-                                    <use href="./images/icons.svg#icon-here">
-                                </svg>
-                            </div>
+                    <li class="client-item">
+                        <a href="#" class="clients">
+                            <svg width="106" height="60">
+                                <use href="./images/icons.svg#icon-here">
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a>
-                            <div class="clients">
-                                <svg width="106" height="60">
-                                    <use href="./images/icons.svg#icon-company">
-                                </svg>
-                            </div>
+                    <li class="client-item">
+                        <a href="#" class="clients">
+                            <svg width="106" height="60">
+                                <use href="./images/icons.svg#icon-company">
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a>
-                            <div class="clients">
-                                <svg width="106" height="60">
-                                    <use href="./images/icons.svg#icon-foster">
-                                </svg>
-                            </div>
+                    <li class="client-item">
+                        <a href="#" class="clients">
+                            <svg width="106" height="60">
+                                <use href="./images/icons.svg#icon-foster">
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a>
-                            <div class="clients">
-                                <svg width="106" height="60">
-                                    <use href="./images/icons.svg#icon-brand">
-                                </svg>
-                            </div>
+                    <li class="client-item">
+                        <a href="#" class="clients">
+                            <svg width="106" height="60">
+                                <use href="./images/icons.svg#icon-brand">
+                            </svg>
                         </a>
                     </li>
-                    <li>
-                        <a>
-                            <div class="clients">
-                                <svg width="106" height="60">
-                                    <use href="./images/icons.svg#icon-line">
-                                </svg>
-                            </div>
+                    <li class="client-item">
+                        <a href="#" class="clients">
+                            <svg width="106" height="60">
+                                <use href="./images/icons.svg#icon-line">
+                            </svg>
                         </a>
                     </li>
                 </ul>
@@ -352,28 +344,28 @@
                         <li>
                             <a class="foot-social" href="#">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-instagram">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a class="foot-social" href="#">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-twitter">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>    
                         </li>
                         <li>
                             <a class="foot-social" href="#">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-facebook">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a class="foot-social" href="#">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-linkedin">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
