--- a/portfolio.html
+++ b/portfolio.html
@@ -20,19 +20,23 @@
                     <li class="items"><a class="link" href="#">Контакти</a></li>
                 </ul>
             </nav>
-                <ul class="auth-nav items-nav">
-                    <li class="items">
+            <ul class="auth-nav items-nav">
+                <li class="items">
+                    <a class="link" href="mailto:info@devstudio.com"> 
                         <svg  class = "icon" width="16" height="12">
-                            <use href="./images/icons.svg#icon-envelope"></use>                          
-                        </svg>
-                        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="items">
+                        <use href="./images/icons.svg#icon-envelope"></use>                          
+                    </svg>info@devstudio.com
+                    </a>
+                </li>
+                <li class="items">
+                    <a class="link" href="tel:+380961111111">
                         <svg  class = "icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>                          </use>
                         </svg>
-                        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
-                </ul>
+                        +38 096 111 11 11
+                    </a>
+                </li>
+            </ul>
         </div>
     </header>
     <main>
@@ -160,28 +164,28 @@
                         <li>
                             <a class="foot-social" href="#">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-instagram">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a class="foot-social" href="#">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-twitter">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>    
                         </li>
                         <li>
                             <a class="foot-social" href="#">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-facebook">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a class="foot-social" href="#">
                                 <svg width="20" height="20">
-                                    <use href="./images/icons.svg#icon-linkedin">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
